--- a/multi-tenant-server/src/main/resources/application-dev.properties
+++ b/multi-tenant-server/src/main/resources/application-dev.properties
@@ -39,9 +39,9 @@ spring.servlet.multipart.max-request-size=20MB
 spring.devtools.restart.enabled=true
 
 # redis 配置
-spring.redis.host=127.0.0.1
+spring.redis.host=124.70.44.0
 spring.redis.port=6379
-#spring.redis.password=
+spring.redis.password=123456
 
 # 连接超时时间
 spring.redis.timeout=10s
@@ -116,7 +116,7 @@ aliyun.oss.endpointContent = oss-cn-shanghai.aliyuncs.com
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 # 主库数据源
-spring.datasource.druid.master.url=jdbc:mysql://127.0.0.1:3306/mt?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+spring.datasource.druid.master.url=jdbc:mysql://124.70.44.0:3306/mt?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
 spring.datasource.druid.master.username=root
 spring.datasource.druid.master.password=123456
 
