依赖新增---MyBatis-plus

--- a/multi-tenant-server/pom.xml
+++ b/multi-tenant-server/pom.xml
@@ -286,6 +286,12 @@
 			</exclusions>
 		</dependency>
 
+		<dependency>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus-boot-starter</artifactId>
+			<version>3.3.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
