功能新增---初始化代码

--- a/multi-tenant-server/pom.xml
+++ b/multi-tenant-server/pom.xml
@@ -287,9 +287,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.baomidou</groupId>
-			<artifactId>mybatis-plus-boot-starter</artifactId>
-			<version>3.3.2</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
