组织人员，用户授权

--- a/multi-tenant-web/package.json
+++ b/multi-tenant-web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ruoyi",
   "version": "2.3.0",
-  "description": "Multi-tenant",
+  "description": "dcdemo",
   "author": "wangyong",
   "license": "MIT",
   "scripts": {
