--- a/multi-tenant-web/package.json
+++ b/multi-tenant-web/package.json
@@ -44,11 +44,12 @@
     "axios": "0.18.1",
     "clipboard": "2.0.4",
     "echarts": "4.2.1",
+    "el-tree-transfer": "^2.4.7",
     "element-china-area-data": "^5.0.1",
     "element-ui": "2.13.0",
     "file-saver": "2.0.1",
     "fuse.js": "3.4.4",
-    "js-beautify": "^1.10.2",
+    "js-beautify": "^1.14.7",
     "js-cookie": "2.2.0",
     "jsencrypt": "3.0.0-rc.1",
     "moment": "^2.24.0",
