--- a/multi-tenant-server/src/main/resources/application-dev.properties
+++ b/multi-tenant-server/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ ruoyi.version=2.3.0
 ruoyi.copyrightYear=2019
 ruoyi.demoEnabled=true
 # 文件路径 示例（ Windows配置D:/ruoyi/uploadPath，Linux配置 /home/ruoyi/uploadPath）
-ruoyi.profile=D:/ruoyi/uploadPath
+ruoyi.profile=/Users/codedan/Desktop/serverLocal/ruoyi
 # 获取ip地址开关
 ruoyi.addressEnabled=false
 
@@ -116,7 +116,7 @@ aliyun.oss.endpointContent = oss-cn-shanghai.aliyuncs.com
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 # 主库数据源
-spring.datasource.druid.master.url=jdbc:mysql://124.70.44.0:3306/mt?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.druid.master.url=jdbc:mysql://124.70.44.0:3306/mt?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=Asia/Shanghai
 spring.datasource.druid.master.username=root
 spring.datasource.druid.master.password=123456
 
